# storage/api-docs/api-docs.json
@@ -7,30 +7,34 @@
     },
     "paths": {
         "/": {},
-        "/api/dang-nhap": {
+        "/api/nguoi-dung/login": {
             "post": {
                 "tags": [
-                    "NguoiDung"
+                    "Người Dùng"
                 ],
                 "summary": "Login",
-                "operationId": "dangNhap",
+                "operationId": "dangNhapNguoiDung",
                 "requestBody": {
                     "content": {
                         "multipart/form-data": {
                             "schema": {
                                 "required": [
                                     "email",
-                                    "password"
+                                    "mat_khau"
                                 ],
                                 "properties": {
-                                    "tai_khoan": {
-                                        "description": "Tài Khoản",
+                                    "email": {
+                                        "description": "Email",
                                         "type": "string"
                                     },
                                     "mat_khau": {
                                         "description": "Mật Khẩu",
                                         "type": "string",
                                         "format": "password"
+                                    },
+                                    "fcm_token": {
+                                        "description": "Token device",
+                                        "type": "string"
                                     }
                                 },
                                 "type": "object"
@@ -56,6 +60,217 @@
                 ]
             }
         },
+        "/api/nguoi-dung": {
+            "get": {
+                "tags": [
+                    "Người Dùng"
+                ],
+                "summary": "Danh Sách Phim",
+                "operationId": "index",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Error server"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/nguoi-dung/them-moi-nguoidung": {
+            "post": {
+                "tags": [
+                    "Người Dùng"
+                ],
+                "summary": "Thêm mới người dùng",
+                "operationId": "create",
+                "parameters": [
+                    {
+                        "name": "ten",
+                        "in": "query",
+                        "description": "Tên người dùng",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "tai_khoan",
+                        "in": "query",
+                        "description": "Tài khoản",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "mat_khau",
+                        "in": "query",
+                        "description": "Mật  khẩu",
+                        "schema": {
+                            "type": "string",
+                            "format": "password"
+                        }
+                    },
+                    {
+                        "name": "email",
+                        "in": "query",
+                        "description": "Email",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "fb_token",
+                        "in": "query",
+                        "description": "fb_token",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Error server"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/tim-kiem": {
+            "get": {
+                "tags": [
+                    "Tìm kiếm"
+                ],
+                "summary": "Tìm kiếm theo nhu cầu",
+                "operationId": "TiemKiem",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "key_word": {
+                                        "description": "Tìm kiếm",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Error server"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/phim/{id}": {
+            "get": {
+                "tags": [
+                    "Chi Tiết Trang"
+                ],
+                "summary": "Thông tin chi tiết trang",
+                "operationId": "ChiTietTrang",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID phim",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64",
+                            "minimum": 1
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Error server"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/phim/them-phim": {
+            "post": {
+                "tags": [
+                    "Phim"
+                ],
+                "summary": "Cập nhật phim",
+                "operationId": "TaoPhim",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "fileFilm": {
+                                        "description": "Thêm file",
+                                        "type": "file"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Error server"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/phim": {
             "get": {
                 "tags": [
@@ -63,25 +278,270 @@
                 ],
                 "summary": "Danh Sách Phim",
                 "operationId": "layDanhSach",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Error server"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/quan-tri-vien": {
+            "get": {
+                "tags": [
+                    "Quản Trị Viên"
+                ],
+                "summary": "Lấy danh sách quản trị viên",
+                "operationId": "index",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Error server"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/quan-tri-vien/login": {
+            "post": {
+                "tags": [
+                    "Quản Trị Viên"
+                ],
+                "summary": "Login",
+                "operationId": "dangNhap",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "email",
+                                    "mat_khau"
+                                ],
+                                "properties": {
+                                    "email": {
+                                        "description": "Email",
+                                        "type": "string"
+                                    },
+                                    "mat_khau": {
+                                        "description": "Mật Khẩu",
+                                        "type": "string",
+                                        "format": "password"
+                                    },
+                                    "fcm_token": {
+                                        "description": "Token device",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Error server"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/quan-tri-vien/logout": {
+            "post": {
+                "tags": [
+                    "Quản Trị Viên"
+                ],
+                "summary": "Logout",
+                "operationId": "dangXuat",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Error server"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/quan-tri-vien/them-moi-quantrivien": {
+            "post": {
+                "tags": [
+                    "Quản Trị Viên"
+                ],
+                "summary": "Thêm quản trị viên",
+                "operationId": "create",
+                "parameters": [
+                    {
+                        "name": "ten",
+                        "in": "query",
+                        "description": "Tên quản trị viên",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "tai_khoan",
+                        "in": "query",
+                        "description": "Tai_khoản",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "mat_khau",
+                        "in": "query",
+                        "description": "Mật  khẩu",
+                        "schema": {
+                            "type": "string",
+                            "format": "password"
+                        }
+                    },
+                    {
+                        "name": "email",
+                        "in": "query",
+                        "description": "Email",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "loai",
+                        "in": "query",
+                        "description": "Loại",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "fb_token",
+                        "in": "query",
+                        "description": "fb_token",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Error server"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/quan-tri-vien/{id}": {
+            "get": {
+                "tags": [
+                    "Quản Trị Viên"
+                ],
+                "summary": "Chi tiết thông tin quản trị viên",
+                "operationId": "show",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID của quản trị viên",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64",
+                            "minimum": 1
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Error server"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Quản Trị Viên"
+                ],
+                "summary": "Cập nhật thông tin quản trị viên",
+                "operationId": "update",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID của quản trị viên",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64",
+                            "minimum": 1
+                        }
+                    }
+                ],
                 "requestBody": {
                     "content": {
                         "multipart/form-data": {
                             "schema": {
                                 "properties": {
-                                    "loai_phim_id": {
-                                        "description": "Thể loại",
+                                    "ten": {
+                                        "description": " Tên quản trị viên",
                                         "type": "string"
                                     },
-                                    "quoc_gia_id": {
-                                        "description": "Ngôn Ngữ",
-                                        "type": "string"
-                                    },
-                                    "kieu_phim_id": {
-                                        "description": "Kiểu phim",
-                                        "type": "string"
-                                    },
-                                    "nam_san_xuat": {
-                                        "description": "Năm sản xuất",
+                                    "tai_khoan": {
+                                        "description": "Tài khoản quản trị viên",
                                         "type": "string"
                                     }
                                 },
